Fixed bug in tab headers: vertical align text and icon.

--- a/src/app/topics-section/topics-section.component.css
+++ b/src/app/topics-section/topics-section.component.css
@@ -27,3 +27,7 @@ table {
 table td, table th {
   vertical-align: middle;
 }
+
+.tab-label-text {
+  margin-bottom: 0;
+}
